--- a/backend/public/css/game.css
+++ b/backend/public/css/game.css
@@ -17,6 +17,13 @@
   background-color: cornflowerblue;
 }
 
+/*投稿ボタンなど*/
+.add-box {
+  margin-top: 10px;
+  height: 100px;
+  background-color: black;
+}
+
 /*新着投稿一覧*/
 .game-lists {
   margin-top: 10px;
